--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ debug=true
 spring.datasource.url=jdbc:mysql://localhost:3308/dbFiapProject
 spring.datasource.username=root
 spring.datasource.password=pass
+spring.mvc.dispatch-options-request=true
